feat: queue AI workflows with realtime updates - queue resume evaluations, tailored resume generation, and company research jobs, broadcasting their status back to the user channel - hook Laravel Reverb/Echo into the job and resume pages to live-refresh evaluation cards, show spinners, and surface errors as tasks progress - switch the default queue/broadcast config to Redis/Reverb and hard job description scraping when HTML content is sparse or noisy - add Horizon/Reverb backend packages alongside Echo/Pusher client deps to power the realtime experience

--- a/.env.example
+++ b/.env.example
@@ -33,9 +33,9 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
 CACHE_STORE=database
 # CACHE_PREFIX=
@@ -46,6 +46,13 @@ REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+REVERB_APP_ID=local-app
+REVERB_APP_KEY=local-app-key
+REVERB_APP_SECRET=local-app-secret
+REVERB_HOST=127.0.0.1
+REVERB_PORT=8080
+REVERB_SCHEME=http
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
@@ -69,3 +76,7 @@ OPENAI_TAILOR_MODEL=gpt-5
 OPENAI_TIMEOUT=180
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
