--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.0",
         "laravel/reverb": "^1.2",
+        "laravel/telescope": "^5.14",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
         "smalot/pdfparser": "^2.12"
