--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,11 @@ OPENAI_ANALYSIS_MODEL=gpt-5-nano
 OPENAI_TAILOR_MODEL=gpt-5
 OPENAI_TIMEOUT=180
 
+STRIPE_KEY=
+STRIPE_SECRET=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_PRO_MONTHLY_PRICE_ID=
+
 VITE_APP_NAME="${APP_NAME}"
 VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
 VITE_REVERB_HOST="${REVERB_HOST}"
