added local cert env

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,7 @@ REVERB_APP_SECRET=local-app-secret
 REVERB_HOST=127.0.0.1
 REVERB_PORT=8080
 REVERB_SCHEME=http
+REVERB_TLS_LOCAL_CERT=
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
